// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/thumbnail-card/ThumbnailCardDetails should render 1`] = `
<div
  className="thumbnail-card-details"
>
  <div
    className="thumbnail-card-details-content"
  >
    <div
      className="thumbnail-card-title"
    >
      <div>
        Foo Bar!
      </div>
    </div>
  </div>
</div>
`;

exports[`components/thumbnail-card/ThumbnailCardDetails should render icon 1`] = `
<div
  className="thumbnail-card-details"
>
  <img
    alt="icon"
  />
  <div
    className="thumbnail-card-details-content"
  >
    <div
      className="thumbnail-card-title"
    >
      <div>
        Foo Bar!
      </div>
    </div>
  </div>
</div>
`;

exports[`components/thumbnail-card/ThumbnailCardDetails should render subtitle 1`] = `
<div
  className="thumbnail-card-details"
>
  <div
    className="thumbnail-card-details-content"
  >
    <div
      className="thumbnail-card-title"
    >
      <div>
        Foo Bar!
      </div>
    </div>
    <div
      className="thumbnail-card-subtitle"
    >
      <div>
        Subtitle!
      </div>
    </div>
  </div>
</div>
`;
